--- a/app/views/bloggers/everything.html.erb
+++ b/app/views/bloggers/everything.html.erb
@@ -4,6 +4,8 @@
     <tr>
       <th>Name</th>
       <th>Level</th>
+      <th>ID</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -12,6 +14,10 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.level %></td>
+        <td><%= user.id %></td>
+        <td><%= user %></td>
+        <td><%= link_to 'Edit', edit_path(user) %></td>
+        <td><%= link_to 'Destroy', bloggers_everything_path(Blogger.find(user.id)), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
