--- a/app/views/bloggers/edit.html.erb
+++ b/app/views/bloggers/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Blogger <%=@set%></h1>
-<%= form_with scope: :blogger, url: bloggers_everything_path(), method: :patch do |form| %>
+<%= form_with(model: @setuser) do |form| %>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
