--- a/app/views/bloggers/everything.html.erb
+++ b/app/views/bloggers/everything.html.erb
@@ -1,23 +1,22 @@
 <h1>Bloggers</h1>
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
       <th>Level</th>
       <th>ID</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @usersBlogger.each do |user| %>
+    <% @all_bloggers.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td><%= user.level %></td>
         <td><%= user.id %></td>
-        <td><%= user %></td>
         <td><%= link_to 'Edit', edit_path(user) %></td>
-        <td><%= link_to 'Destroy', bloggers_everything_path(Blogger.find(user.id)), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', bloggers_everything_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
