--- a/app/views/bloggers/everything.html.erb
+++ b/app/views/bloggers/everything.html.erb
@@ -4,8 +4,8 @@
     <tr>
       <th>Name</th>
       <th>Level</th>
-      <th>ID</th>
-      <th colspan="2"></th>
+      <th>Comments</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -14,7 +14,8 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.level %></td>
-        <td><%= user.id %></td>
+        <td><%= user.comments.count %></td>
+        <td><%= link_to 'Comments', blogger_comment_page_path(user) %></td>
         <td><%= link_to 'Edit', edit_path(user) %></td>
         <td><%= link_to 'Destroy', bloggers_everything_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
