--- a/app/views/bloggers/everything.html.erb
+++ b/app/views/bloggers/everything.html.erb
@@ -1,5 +1,5 @@
 <h1>Bloggers</h1>
-<table class="table table-striped">
+<table class="table table-hover align-middle">
   <thead>
     <tr>
       <th>Name</th>
@@ -15,9 +15,9 @@
         <td><%= user.name %></td>
         <td><%= user.level %></td>
         <td><%= user.comments.count %></td>
-        <td><%= link_to 'Comments', blogger_comment_page_path(user) %></td>
-        <td><%= link_to 'Edit', edit_path(user) %></td>
-        <td><%= link_to 'Destroy', bloggers_everything_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Comments', blogger_comment_page_path(user),class:"btn btn-success btn-sm" %></td>
+        <td><%= link_to 'Edit', edit_path(user),class:"btn btn-warning btn-sm" %></td>
+        <td><%= link_to 'Destroy', bloggers_everything_path(user.id), method: :delete, data: { confirm: 'Are you sure?' },class:"btn btn-danger btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,14 +26,14 @@
 <br>
 <h1>Add Blogger</h1>
 <%= form_with scope: :blogger, url: bloggers_everything_path do |form| %>
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="mb-3">
+    <%= form.label :name ,class:"form-label"%>
+    <%= form.text_field :name, class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :level %>
-    <%= form.number_field  :level %>
+  <div class="mb-3">
+    <%= form.label :level ,class:"form-label" %>
+    <%= form.number_field  :level, class:"form-control" %>
   </div>
 
   <div class="actions">
